# dotfiles

./: .gitignore  .startup  .zshrc  README.md  load_dotfiles.sh  load_new_configs.sh
quickshell/.config/quickshell/plugin/: CMakeLists.txt
quickshell/.config/quickshell/plugin/cmake/: pch.cmake  qml-module.cmake  sensorslib.cmake
quickshell/.config/quickshell/plugin/src/Caelestia/: CMakeLists.txt  appdb.cpp  cutils.cpp  cutils.hpp  imageanalyser.cpp  requests.cpp  toaster.cpp
quickshell/.config/quickshell/plugin/src/Caelestia/Blobs/: CMakeLists.txt  blobgroup.cpp  blobgroup.hpp  blobinvertedrect.cpp  blobinvertedrect.hpp  blobmaterial.cpp  blobmaterial.hpp  blobrect.cpp  blobrect.hpp  blobshape.cpp  blobshape.hpp
quickshell/.config/quickshell/plugin/src/Caelestia/Components/: CMakeLists.txt  buttonrow.cpp  buttonrow.hpp  lazylistview.cpp  lazylistview.hpp  wavyline.cpp  wavyline.hpp
quickshell/.config/quickshell/plugin/src/Caelestia/Config/: CMakeLists.txt  anim.cpp  anim.hpp  appearanceconfig.cpp  appearanceconfig.hpp  backgroundconfig.hpp  barconfig.hpp  borderconfig.hpp  config.cpp  config.hpp  configattached.cpp  configattached.hpp  configobject.cpp  configobject.hpp  dashboardconfig.hpp  font.cpp  font.hpp  fontbuilder.cpp  fontbuilder.hpp  generalconfig.hpp  launcherconfig.hpp  lockconfig.hpp  monitorconfigmanager.cpp  monitorconfigmanager.hpp  nexusconfig.hpp  notifsconfig.hpp  osdconfig.hpp  rootconfig.cpp  rootconfig.hpp  serviceconfig.hpp  sessionconfig.hpp  sidebarconfig.hpp  tokens.cpp  tokens.hpp  tokensattached.cpp  tokensattached.hpp  userpaths.hpp  utilitiesconfig.hpp  winfoconfig.hpp
(+765 files in other folders)
